--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "0.0.0",
   "private": true,
   "hexo": {
-    "version": "3.4.4"
+    "version": "4.2.0"
   },
   "dependencies": {
-    "hexo": "^3.2.0",
+    "hexo": "^4.2.0",
     "hexo-auto-canonical": "^0.1.1",
     "hexo-autonofollow": "^1.0.1",
-    "hexo-deployer-git": "^0.3.1",
+    "hexo-deployer-git": "^2.1.0",
+    "hexo-excerpt": "^1.1.6",
     "hexo-generator-archive": "^0.1.4",
     "hexo-generator-category": "^0.1.3",
     "hexo-generator-feed": "^1.2.2",
